# sor_2026_session4_and_5

./: .gitignore
src/Session5/bme_ros2_navigation/launch/: localization.launch.py  localization_slam_toolbox.launch.py  mapping.launch.py  navigation.launch.py  navigation_with_slam.launch.py
src/Session5/bme_ros2_navigation_py/: setup.py
src/Session5/bme_ros2_navigation_py/bme_ros2_navigation_py/: waypoint_patrol.py
src/Session5_arm/bme_ros2_simple_arm/launch/: spawn_robot.launch.py
src/Session5_arm/bme_ros2_simple_arm/urdf/: mogi_arm.gazebo  mogi_arm.xacro
src/Session5_arm/bme_ros2_simple_arm_moveit_config/: .setup_assistant  package.xml
src/Session5_arm/bme_ros2_simple_arm_moveit_config/config/: joint_limits.yaml  mogi_arm.srdf
src/Session5_arm/bme_ros2_simple_arm_py/: setup.py
src/Session5_arm/bme_ros2_simple_arm_py/bme_ros2_simple_arm_py/: arm_ik.py
src/sensors_and_perception/: README.md
src/sensors_and_perception/gazebo_models/Piano/: model.sdf
src/sensors_and_perception/src/erc_gazebo_sensors/: CMakeLists.txt  package.xml
src/sensors_and_perception/src/erc_gazebo_sensors_py/: package.xml  setup.py
src/sensors_and_perception/src/erc_gazebo_sensors_py/erc_gazebo_sensors_py/: chase_the_ball.py  yolo_detection_node.py
src/sensors_and_perception/src/trajectory_server/: package.xml  setup.py
src/sor-ros-session1/: README.md
src/sor-ros-session1/erc_sor_ros_session1/: CMakeLists.txt  package.xml
src/sor-ros-session1/erc_sor_ros_session1/config/: ekf.yaml
src/sor-ros-session1/erc_sor_ros_session1_py/: package.xml  setup.cfg  setup.py
(+15 files in other folders)
